# energy-comparison-table

./: .adr-dir  .env.example  .eslintrc.js  .gitignore  .haml-lint.yml  .rspec  .rubocop.yml  .stylelintrc.js  Dockerfile  Gemfile  Jenkinsfile  LICENSE  NOTICE  README.md  app.py  package.json
.github/: dependabot.yml
.github/resources/: preview-overrides.yaml
.github/workflows/: README.md  deploy-energy-apps.yaml  deploy.yaml  lint.yml  lint_and_test.yml  review-app-create.yml  review-app-destroy.yml  review-app-scan.yml
app/components/: breadcrumbs_component.rb  description_list_component.html.haml  description_list_component.rb  example_component.html.haml  example_component.rb  footer_component.rb  fuel_mix_component.html.haml  fuel_mix_component.rb  grouped_select_component.rb  header_component.rb  impact_survey_component.html.haml  impact_survey_component.rb  location_switcher_component.html.haml  location_switcher_component.rb  other_info_component.html.haml  other_info_component.rb  other_scores_component.html.haml  other_scores_component.rb  score_component.html.haml  score_component.rb  score_summary_component.html.haml  score_summary_component.rb  stars_component.html.haml  stars_component.rb  supplier_table_component.html.haml  supplier_table_component.rb  supplier_table_row_component.html.haml  supplier_table_row_component.rb
app/controllers/: appliance_calculator_controller.rb  application_controller.rb  status_controller.rb  suppliers_controller.rb
app/helpers/: application_helper.rb  content_helper.rb  country_helper.rb  footer_helper.rb  meta_tags_helper.rb  navigation_links_helper.rb
app/javascript/: application.js  (+6 more)
bridgetown/: Dockerfile  handler.rb
config/: application.rb  credentials.yml.enc  license_finder.yml  puma.rb  routes.rb
db/: schema.json
doc/: dependency_decisions.yml
docs/: analytics.md  getting-started.md  static-asset-pipeline.md  view-components.md  working-with-queries.md
energy_comparison_table/: energy_comparison_table_stack.py
features/: cucumber_setup_test.feature  supplier_table.feature
infrastructure/: README.md  app.py
infrastructure/cdk/: .pre-commit-config.yaml  README.md  app.py  cdk.json  pyproject.toml
infrastructure/cdk/stacks/: ecr.py
infrastructure/cdk/tests/unit/: test_energy_comparison_table_stack.py
infrastructure/energy-apps-cdk/: README.md  app.py  cdk.json  pyproject.toml
infrastructure/energy-apps-cdk/stacks/: ecr.py
script/: cucumber
spec/: rails_helper.rb  spec_helper.rb
stacks/: ecr.py  eks_role.py
test/: test_helper.rb
(+226 files in other folders)
