[tool.poetry]
name = "energy-comparison-table-cdk"
version = "0.1.0"
description = "CDK app for the Energy Comparison Table"
authors = ["CA Content Platform Team <contentplatform@citizensadvice.org.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pytest = "8.3.4"
ca-cdk-constructs = {git = "https://github.com/citizensadvice/ca-cdk-constructs", rev = "v0.9.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[tool.black]
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
